--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
 
     <body>
         <div id = "container">
+            <div id = "cabecera">
+                cabecera
+            </div>
             <div id = "post">
                 <h1>Hola buenos dias</h1>
                 <p>que hace</p>
