--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,8 @@
     <body>
         <div id = "container">
             <div id = "cabecera">
-                cabecera
+                hyperblog
+                <span id = "tagline">Tu blog de confianza</span>
             </div>
             <div id = "post">
                 <h1>Hola buenos dias</h1>
