agrego nuevo parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
         <div id = "container">
             <div id = "post">
                 <h1>Hola buenos dias</h1>
-                <p>que hace</p>
+                <p>¿que hace?</p>
+                <p>bienvenido a mi blog.</p>
             </div>
         </div>
     </body>
