--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <div id = "post">
                 <h1>Hola buenos dias</h1>
                 <p>que hace</p>
+                <p>¿se sulucinara con esto?</p>
             </div>
         </div>
     </body>
