--- a/blogpost.html
+++ b/blogpost.html
@@ -16,8 +16,8 @@
             </div>
             <div id = "post">
                 <h1>Hola buenos dias</h1>
-                <p>que hace</p>
-                <p>¿se sulucinara con esto?</p>
+                <p>¿que hace?</p>
+                <p>bienvenido a mi blog</p>
             </div>
         </div>
     </body>
