--- a/blogpost.html
+++ b/blogpost.html
@@ -16,8 +16,9 @@
             </div>
             <div id = "post">
                 <h1>Hola buenos dias</h1>
+                <p>¿como ha estado?</p>
                 <p>¿que hace?</p>
-                <p>bienvenido a mi blog.</p>
+                <p>bienvenido a mi blog</p>
             </div>
         </div>
     </body>
