--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>GIT</title>
+        <title>GIT Y GIT HUB</title>
 
         <link rel= "stylesheet" href = "css/estilos.css" />
     </head>
