termino pie de pagina

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
                 <p>¿que hace?</p>
                 <p>bienvenido a mi blog</p>
             </div>
+            <div id = "pieDePagina">
+                <p>puto el que lo lea</p>
+            </div>
         </div>
     </body>
 </html>
