cambiamos saludo y agregamos otro texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,8 @@
             </div>
             <div id = "post">
                 <h1>Hola buenos dias</h1>
-                <p>¿que hace?</p>
+                <p>buenas tardes o buenas noches</p>
+                <p>click aqui</p>
                 <p>bienvenido a mi blog</p>
             </div>
             <div id = "pieDePagina">
