--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                 <h1>Hola buenos dias</h1>
                 <p>buenas tardes o buenas noches</p>
                 <p>click aqui</p>
+                <p><img src = "https://m.media-amazon.com/images/I/71VNiXU0M0L._SS500_.jpg"/> </p>
                 <p>bienvenido a mi blog</p>
             </div>
             <div id = "pieDePagina">
