--- a/blogpost.html
+++ b/blogpost.html
@@ -22,7 +22,7 @@
                 <p>bienvenido a mi blog</p>
             </div>
             <div id = "pieDePagina">
-                <p>puto el que lo lea</p>
+                <p>puto el que lo lea, disputo el que reaccione</p>
             </div>
         </div>
     </body>
